docs/css/style.css
@import url('https://fonts.googleapis.com/css?family=Nunito:200,400,800,900&display=swap');
@import url('https://fonts.googleapis.com/css?family=Athiti:700&display=swap');

:root {
    --main-bg-color:    #fafaff;
    --black-color:      #434343;
    --grey-color:       #6f6f6f;
    --white-color:      #ffffff;
    --light-color:      rgba(255, 255, 255, 0.8);
    --color-1:          rgb(239,138,255);
    --color-2:          rgb(179,143,255);
}

body {
    font-family: 'Nunito', sans-serif;
    background: #ECEFFF;
}

.whole-site {
    margin: auto;
    background: var(--main-bg-color);
    max-width: 1200px;
}

p {
    font-size: 1.05em;
    line-height: 1.45em;
}

ul {
    list-style-type: none;
}

.menu {
    font-size: 1.5em;
}

.mobile-hide {
    display: none;
}

.gradient-1 {
    background: rgb(239,138,255);
    background: linear-gradient(80deg, rgb(239,138,255,1) 30%, rgba(179,143,255,1) 100%);
}

.gradient-2 {
    background: rgb(239,138,255);
    background: linear-gradient(80deg, rgba(179,143,255,1) 0%, rgb(239,138,255,1) 100%);
}

.black {
    color: var(--black-color);
}

.white {
    color: var(--white-color);
}

.light {
    color: var(--light-color);
}

.color {
    background: linear-gradient(50deg, var(--color-1), var(--color-2));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;  
}

.box-shadow {
    box-shadow: 0 0 0.4em rgba(0, 0, 0, 0.35);
}

header {
    display: flex;
    justify-content: space-between;
    margin-top: 0;
    text-align: center;
    height: 5.5em;
}

.hero-container {
    text-align: center;
    position: relative;
}

h1 {
    font-size: 2em;
    font-weight: bold;
    text-shadow: 0.2em 0.2em 0.3em rgba(0, 0, 0, 0.1);
    margin-top: 0.3em;
    margin-bottom: -0.02em;
}

h2 {
    font-size: 1em;
    font-weight: normal;
    text-shadow: 0.2em 0.2em 0.3em rgba(0, 0, 0, 0.1);
    margin-left: 0.12em;
    margin-bottom: 0.97em;
}

h3 {
    font-size: calc(0.65vw + 1.03em);
    font-weight: normal;
    line-height: 1.4em;
}

h4 {
    font-family: 'Athiti', sans-serif;
    font-size: 1.5em;
    font-weight: bold;
}

h5 {
    text-align: center;
    font-size: 1.2em;
    font-weight: bold;
}

.screenshot {
    width: 90%;
    max-width: 800px;
    box-shadow: 0em 0em 1.5em rgba(0, 0, 0, 0.25);
}

.features-container {
    position: relative;
    padding-bottom: calc(1% + 25px);
}

.card {
    background: var(--light-color);
    border-radius: 20px;
}

.download-container {
    text-align: center;
    max-width: 600px;
}

.icon {
    width: 1.5em;
    transform: translateY(-2px);
    /* trick to set color of svg to var(--black-color) */
    filter: invert(24%) sepia(0%) saturate(0%) hue-rotate(188deg) brightness(91%) contrast(85%);
}

.links { 
    margin: 35px auto;
}

.download-container button {
    width: 100px;
    border-radius: 10px;
    border-color: transparent;
    box-shadow: 0 0 0 1pt var(--black-color);
    font-size: 1.05em;
    text-align: center;
    color: var(--grey-color);
    transition-duration: 0.2s;
}

.download-container button:hover {
    background-color: var(--black-color);
    color: var(--light-color);
}

.transparent {
    border: 1px solid var(--black-color);
    background-color: transparent;
    color: var(--black-color);
}

.ghost {
    visibility: hidden;    
}

.manual-container button {
    width: 200px;
    border-radius: 10px;
    border-color: transparent;
    box-shadow: 0 0 0 1pt var(--light-color);
    font-size: 1.05em;
    text-align: center;
    transition-duration: 0.2s;
}

.dark {
    border: 1px solid var(--black-color);
}

button:focus {
    outline: none;
}

.btn-filled {
    background-color: var(--light-color);
    color: rgba(67, 67, 67, 0.8);
}

.btn-filled:hover {
    background-color: transparent;
    color: var(--light-color);
}

.btn-light-transparent {
    background-color: transparent;
    color: var(--light-color);
}

.btn-light-transparent:hover {
    background-color: var(--light-color);
    color: rgba(67, 67, 67, 0.8);
}

.bottom-container {
    height: 5.5em;
    color: var(--light-color);
    text-align: center;
    background: rgb(83,85,97);
    background: linear-gradient(50deg, rgba(83,85,97,1) 0%, rgba(96,98,111,1) 100%);
    }

/* large screens */
@media only screen and (min-width: 1200px) {
    .whole-site {
        margin: 35px auto;
        box-shadow: 0 0 0.8em rgba(0, 0, 0, 0.15);
    }
    h3 {
        font-size: 1.5em;
    }
}

/* large screens */
@media only screen and (max-width: 960px) {
    .screenshot {
        margin: 25px auto -8px auto !important; 
    }
    .features-container {
        margin-top: 26px !important;
    }
}

